--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,10 @@ twitter_username: preetam
 github_username:  preetampvp
 
 # Build settings
-markdown: kramdown
-theme: minima
+markdown: rdiscount
+rdiscount:
+    extensions: [smart]
+permalink: /articles/:title
 gems:
   - jekyll-feed
 exclude:
